# object_detection_metrics

./: .coveragerc  .gitignore  LICENSE  LICENSE.txt  README.md  README.rst  pytest.ini  requirements.txt  requirements_linux.txt  requirements_windows.txt  setup.cfg  setup.py
.github/workflows/: pytest.yml  python-package.yml
deprecated/: test_utils.py
deprecated/sample_2/: detections.json  groundtruths.json
podm/: pcoco.py  podm.py  visualize.py
src/podm/: __init__.py  box.py  coco.py  coco2lableme.py  coco_decoder.py  coco_encoder.py  metrics.py  pascal2coco.py  pascal2json.py  pcoco.py  pcoco_decoder.py  pcoco_encoder.py  podm.py  to_coco.py  to_json.py  utils.py  visualize.py
tests/: conftest.py  test_box.py  test_coco.py  test_coco_decoder.py  test_coco_encoder.py  test_coco_eval.py  test_metrics.py  test_pascal2coco.py  test_pascal_voc_metrics.py  test_pcoco_decoder.py  test_pcoco_encoder.py  test_plot.py  test_pycocotools.py  test_sample_2.py  test_sample_2_coco.py  test_sample_3.py  test_sample_3_coco.py  test_utils.py  to_coco.py  to_json.py  utils.py
tests/helpers/: utils.py
tests/sample/: detections_coco.json  expected0_5.json
tests/sample_2/: detections.json  expected0_5.json  groundtruths.json  groundtruths_coco.json
tests/sample_3/: detections.json  detections_coco.json  expected0_5.json  groundtruths.json  groundtruths_coco.json
