[metadata]
name = object-detection-metrics
# Versions should comply with PEP440.  For a discussion on single-sourcing
# the version across setup.py and the project code, see
# https://packaging.python.org/en/latest/guides/single-sourcing-package-version/
version = 0.3a1
# Author details
author = Yifan Peng
author_email = yip4002@med.cornell.edu
description = Object Detection Metrics
long_description = file: README.md
long_description_content_type = text/markdown
# The project's main homepage.
url = https://github.com/bionlplab/object_detection_metrics'
license = MIT License
keywords = object detection metrics
# See https://pypi.org/classifiers/
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Topic :: Text Processing
    Topic :: Software Development
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Information Analysis
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.7
package_dir=
    =src
packages = find:
install_requires =
    matplotlib
    numpy
    coveralls
    pytest-cov
    pycocotools-windows
    scikit-image

[options.packages.find]
where=src
exclude =
    tests.*
    tests

[options.package_data]
* =
    resources/*

[options.extras_require]
rest = docutils>=0.15.2

[pytest]
norecursedirs=tests/helpers
